# AdverCPM

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/advercpm/attacks/: __init__.py  add_object.py  base_attack.py  burst.py  drift.py  remove_object.py  white_noise.py
src/advercpm/config/: default.yaml  loader.py
src/advercpm/config/experiments/: attack_drift.yaml
src/advercpm/data/: yaml_parser.py
src/advercpm/simulation/: runner.py
src/advercpm/utils/: file_ops.py  logger.py
tests/: conftest.py  test_add_object_attack.py  test_burst_attack.py  test_drift_attack.py  test_remove_object.py  test_white_noise_attack.py
